--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,24 @@ services:
     restart: unless-stopped
     ports:
       - 5432:5432
+  
+  minio:
+    image: minio/minio:latest
+    command: server --console-address ":9001" /data
+    volumes:
+      - minio-data:/data
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   database:
+  minio-data:
