--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Install dependencies
         run: mix deps.get
-        shell: bash
+        timeout-minutes: 1
 
       - name: Compile app
         run: mix compile --all-warnings --warnings-as-errors
