--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,20 +2,20 @@ name: Build and publish a Docker image
 
 on:
   push:
-    branches: ["main"]
+    branches: [main]
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  run-ci:
-    uses: ./.github/workflows/test.yml
+  code-quality:
+    uses: ./.github/workflows/ci.yml
 
   build-and-push-image:
     name: Build and publish image
     needs:
-      - run-ci
+      - code-quality
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -51,3 +51,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
