--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,22 @@
-name: Test
+name: Run tests and check code quality
 
 on:
-  pull_request:
   workflow_call:
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 env:
   MIX_ENV: test
-  ELIXIR_VERSION: 1.17.3
-  OTP_VERSION: 27.1
+  OTP_VERSION: 27.3
+  ELIXIR_VERSION: 1.18.3
 
 jobs:
-  test:
+  code-quality:
     runs-on: ubuntu-latest
 
     services:
       db:
-        image: postgres:15
+        image: postgres:17
         ports: ["5432:5432"]
         env:
           POSTGRES_PASSWORD: postgres
@@ -59,48 +60,27 @@ jobs:
             ${{ runner.os }}-mix-${{ env.cache-name }}-
             ${{ runner.os }}-mix-
 
-      # Don't cache PLTs based on mix.lock hash, as Dialyzer can incrementally update even old ones
-      # Cache key based on Elixir & Erlang version (also useful when running in matrix)
-      - name: Restore PLT cache
-        uses: actions/cache@v4
-        id: plt_cache
-        with:
-          key: |
-            ${{ runner.os }}-${{ env.ELIXIR_VERSION }}-${{ env.OTP_VERSION }}-plt
-          restore-keys: |
-            ${{ runner.os }}-${{ env.ELIXIR_VERSION }}-${{ env.OTP_VERSION }}-plt
-          path: |
-            priv/plts
-
       - name: Install dependencies
         run: mix deps.get
-        timeout-minutes: 1
+        shell: bash
 
       - name: Compile app
         run: mix compile --all-warnings --warnings-as-errors
 
-      - name: Check formatter
+      - name: Check Elixir formatter
         run: mix format --check-formatted
 
       - name: Lint
         run: mix credo --strict
 
       - name: Scan security vulnerabilities
-        run: mix sobelow -i Config.HTTPS --skip --exit
+        run: mix sobelow --config
+
+      - name: Check unused dependencies
+        run: mix deps.unlock --check-unused
 
       - name: Audit dependencies
         run: mix deps.audit
 
       - name: Scan retired dependencies
         run: mix hex.audit
-
-      # Create PLTs if no cache was found
-      - name: Create PLTs
-        if: steps.plt_cache.outputs.cache-hit != 'true'
-        run: mix dialyzer --plt
-
-      - name: Run dialyzer
-        run: mix dialyzer --format github
-
-      - name: Run tests
-        run: mix test
