--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   MIX_ENV: test
-  OTP_VERSION: 27.3
-  ELIXIR_VERSION: 1.18.3
+  OTP_VERSION: 28.0.2
+  ELIXIR_VERSION: 1.19.0-rc.0
 
 jobs:
   code-quality:
